goal/target-maven/generated-sources/antlr4/BpmnScenarioParser.java
// Generated from BpmnScenario.g4 by ANTLR 4.9.3
 package org.vnu.sme.goal.dsl.bpmnscenario.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BpmnScenarioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, STRING=33, NUMBER=34, IDENT=35, WS=36, LINE_COMMENT=37, BLOCK_COMMENT=38;
	public static final int
		RULE_scenario = 0, RULE_stmt = 1, RULE_processDecl = 2, RULE_actorDecl = 3, 
		RULE_bindStmt = 4, RULE_fireStmt = 5, RULE_completedStmt = 6, RULE_activeStmt = 7, 
		RULE_tokenStmt = 8, RULE_valueStmt = 9, RULE_assertStmt = 10, RULE_forClause = 11, 
		RULE_byClause = 12, RULE_qualifiedId = 13, RULE_ref = 14, RULE_value = 15, 
		RULE_listValue = 16, RULE_expr = 17, RULE_compOp = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"scenario", "stmt", "processDecl", "actorDecl", "bindStmt", "fireStmt", 
			"completedStmt", "activeStmt", "tokenStmt", "valueStmt", "assertStmt", 
			"forClause", "byClause", "qualifiedId", "ref", "value", "listValue", 
			"expr", "compOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'scenario'", "'for'", "'{'", "'}'", "'process'", "':'", "';'", 
			"'actor'", "','", "'bind'", "'='", "'fire'", "'completed'", "'active'", 
			"'token'", "'.'", "'::'", "'value'", "'assert'", "'by'", "'['", "']'", 
			"'count'", "'('", "'where'", "')'", "'=='", "'!='", "'>='", "'<='", "'>'", 
			"'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "STRING", "NUMBER", 
			"IDENT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BpmnScenario.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BpmnScenarioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ScenarioContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(BpmnScenarioParser.IDENT, 0); }
		public TerminalNode STRING() { return getToken(BpmnScenarioParser.STRING, 0); }
		public TerminalNode EOF() { return getToken(BpmnScenarioParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ScenarioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scenario; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterScenario(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitScenario(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitScenario(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScenarioContext scenario() throws RecognitionException {
		ScenarioContext _localctx = new ScenarioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_scenario);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			match(IDENT);
			setState(40);
			match(T__1);
			setState(41);
			match(STRING);
			setState(42);
			match(T__2);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__7) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__17) | (1L << T__18))) != 0)) {
				{
				{
				setState(43);
				stmt();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(T__3);
			setState(50);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtFireContext extends StmtContext {
		public FireStmtContext fireStmt() {
			return getRuleContext(FireStmtContext.class,0);
		}
		public StmtFireContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtFire(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtFire(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtFire(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtValueContext extends StmtContext {
		public ValueStmtContext valueStmt() {
			return getRuleContext(ValueStmtContext.class,0);
		}
		public StmtValueContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtValue(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtTokenContext extends StmtContext {
		public TokenStmtContext tokenStmt() {
			return getRuleContext(TokenStmtContext.class,0);
		}
		public StmtTokenContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtToken(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtToken(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtProcessContext extends StmtContext {
		public ProcessDeclContext processDecl() {
			return getRuleContext(ProcessDeclContext.class,0);
		}
		public StmtProcessContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtProcess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtProcess(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtCompletedContext extends StmtContext {
		public CompletedStmtContext completedStmt() {
			return getRuleContext(CompletedStmtContext.class,0);
		}
		public StmtCompletedContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtCompleted(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtCompleted(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtCompleted(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtAssertContext extends StmtContext {
		public AssertStmtContext assertStmt() {
			return getRuleContext(AssertStmtContext.class,0);
		}
		public StmtAssertContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtAssert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtAssert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtAssert(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtBindContext extends StmtContext {
		public BindStmtContext bindStmt() {
			return getRuleContext(BindStmtContext.class,0);
		}
		public StmtBindContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtBind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtBind(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtBind(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtActiveContext extends StmtContext {
		public ActiveStmtContext activeStmt() {
			return getRuleContext(ActiveStmtContext.class,0);
		}
		public StmtActiveContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtActive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtActive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtActive(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtActorContext extends StmtContext {
		public ActorDeclContext actorDecl() {
			return getRuleContext(ActorDeclContext.class,0);
		}
		public StmtActorContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterStmtActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitStmtActor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitStmtActor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				_localctx = new StmtProcessContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				processDecl();
				}
				break;
			case T__7:
				_localctx = new StmtActorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				actorDecl();
				}
				break;
			case T__9:
				_localctx = new StmtBindContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				bindStmt();
				}
				break;
			case T__11:
				_localctx = new StmtFireContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(55);
				fireStmt();
				}
				break;
			case T__12:
				_localctx = new StmtCompletedContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(56);
				completedStmt();
				}
				break;
			case T__13:
				_localctx = new StmtActiveContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(57);
				activeStmt();
				}
				break;
			case T__14:
				_localctx = new StmtTokenContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(58);
				tokenStmt();
				}
				break;
			case T__17:
				_localctx = new StmtValueContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(59);
				valueStmt();
				}
				break;
			case T__18:
				_localctx = new StmtAssertContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(60);
				assertStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(BpmnScenarioParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(BpmnScenarioParser.IDENT, i);
		}
		public ProcessDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterProcessDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitProcessDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitProcessDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessDeclContext processDecl() throws RecognitionException {
		ProcessDeclContext _localctx = new ProcessDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_processDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__4);
			setState(64);
			match(IDENT);
			setState(65);
			match(T__5);
			setState(66);
			match(IDENT);
			setState(67);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorDeclContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(BpmnScenarioParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(BpmnScenarioParser.IDENT, i);
		}
		public ActorDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actorDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterActorDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitActorDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitActorDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActorDeclContext actorDecl() throws RecognitionException {
		ActorDeclContext _localctx = new ActorDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actorDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__7);
			setState(70);
			match(IDENT);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(71);
				match(T__8);
				setState(72);
				match(IDENT);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(T__5);
			setState(79);
			match(IDENT);
			setState(80);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BindStmtContext extends ParserRuleContext {
		public RefContext ref() {
			return getRuleContext(RefContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public BindStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bindStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterBindStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitBindStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitBindStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BindStmtContext bindStmt() throws RecognitionException {
		BindStmtContext _localctx = new BindStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bindStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__9);
			setState(83);
			ref();
			setState(84);
			match(T__10);
			setState(85);
			value();
			setState(86);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FireStmtContext extends ParserRuleContext {
		public QualifiedIdContext qualifiedId() {
			return getRuleContext(QualifiedIdContext.class,0);
		}
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class,0);
		}
		public ByClauseContext byClause() {
			return getRuleContext(ByClauseContext.class,0);
		}
		public FireStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fireStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterFireStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitFireStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitFireStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FireStmtContext fireStmt() throws RecognitionException {
		FireStmtContext _localctx = new FireStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fireStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__11);
			setState(89);
			qualifiedId();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(90);
				forClause();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(93);
				byClause();
				}
			}

			setState(96);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompletedStmtContext extends ParserRuleContext {
		public QualifiedIdContext qualifiedId() {
			return getRuleContext(QualifiedIdContext.class,0);
		}
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class,0);
		}
		public ByClauseContext byClause() {
			return getRuleContext(ByClauseContext.class,0);
		}
		public CompletedStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_completedStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterCompletedStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitCompletedStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitCompletedStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompletedStmtContext completedStmt() throws RecognitionException {
		CompletedStmtContext _localctx = new CompletedStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_completedStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__12);
			setState(99);
			qualifiedId();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(100);
				forClause();
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(103);
				byClause();
				}
			}

			setState(106);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActiveStmtContext extends ParserRuleContext {
		public QualifiedIdContext qualifiedId() {
			return getRuleContext(QualifiedIdContext.class,0);
		}
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class,0);
		}
		public ByClauseContext byClause() {
			return getRuleContext(ByClauseContext.class,0);
		}
		public ActiveStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_activeStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterActiveStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitActiveStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitActiveStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActiveStmtContext activeStmt() throws RecognitionException {
		ActiveStmtContext _localctx = new ActiveStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_activeStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__13);
			setState(109);
			qualifiedId();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(110);
				forClause();
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(113);
				byClause();
				}
			}

			setState(116);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenStmtContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(BpmnScenarioParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(BpmnScenarioParser.IDENT, i);
		}
		public ForClauseContext forClause() {
			return getRuleContext(ForClauseContext.class,0);
		}
		public TokenStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokenStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).enterTokenStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BpmnScenarioListener ) ((BpmnScenarioListener)listener).exitTokenStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BpmnScenarioVisitor ) return ((BpmnScenarioVisitor<? extends T>)visitor).visitTokenStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokenStmtContext tokenStmt() throws RecognitionException {
		TokenStmtContext _localctx = new TokenStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tokenStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__14);
			setState(119);
			match(IDENT);
			setState(120);
			match(T__15);
			setState(121);
			match(IDENT);
			setState(122);
			match(T__16);
			setState(123);
			match(IDENT);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(124);
				forClause();
				}
			}

			setState(127);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
